# vsmartcard

./: .appveyor.yml  .gitignore  .gitmodules  .travis.yml  ISSUE_TEMPLATE.md  Makefile  README.md  appveyor.yml  flake.nix  vscarchitecture.bb
ccid/: ChangeLog  Doxyfile  Doxyfile.in  INSTALL  Makefile  Makefile.am  README  README.dox  README.md  apdu.c  apdu.h  apdus  binutil.c  ccid.c  ccid.h  configure.ac  libpace.pc.in  pace-tool.c  pace.c  pace.h  pace_lib.c  pcsclite_trunk.patch  scutil.c  sm.c  sm.h  usb.c  usbstring.c  usbstring.h  util.c  util.h  utils.c  utils.h
ccid/doc/: Makefile.am  README.rst  README.rst.in  README.txt  README.txt.in  autotools.rst  autotools.rst.in  autotools.txt  download.txt
ccid/patches/: Makefile.am  ccid-1.3.11.patch  ccid-1.3.13.patch  ccid-1.4.4.patch  ccid-1.4.5.patch  pcsc-lite-1.5.5.patch  pcsc-lite-1.6.1.patch  pcsclite_trunk_r4993.patch  pcsclite_trunk_r5063.patch  pcsclite_trunk_r5067.patch  pcsclite_trunk_r5270.patch
ccid/src/: Makefile.am  binutil.c  binutil.h  cats-test.c  cats-tool.c  ccid-emulator.ggo.in  ccid-test.c  ccid-types.h  ccid.c  ccid.h  npa  opensc  pace-tool.c  pace.c  pace.h  pace_lib.c  pace_lib.h  pcscutil.c  pcscutil.h  scutil.c  scutil.h  sm.c  sm.h  sslutil.c  sslutil.h  usb.c
ccid/src/pace/: pace.h  pace_lib.h  scutil.h  sm.h
eID_gui/: AUTHORS  Makefile.am  configure.ac
eID_gui/images/: Makefile.am
eID_gui/src/: Makefile.am  change-pin.desktop.in  change_pin.py  eid_gui.py  pace-gui.desktop.in  pinpad.glade
eID_gui/src/eid/: Makefile.am  Makefile.in  eid_gui_globals.py.in  logic.py  widgets.py  windows.py
npa/: AUTHORS  ChangeLog  Doxyfile.in  Makefile.am  Makefile.am.opensc  README  README.dox  README.md  README.txt  configure.ac  libnpa.pc.in  libpace.pc.in  npa-example-data  opensc.conf.in  test_vicc_with_npa-tool.sh
npa/certs/: DECVCAEPASS00102  DECVCAeID00102  DECVCAeSign00102  Makefile.am  csca-germany_013_self_signed_cer.cer  cvca-eid.cv  cvca-epass.cv  cvca-esign.cv  dv_cert_19.cvcert  dv_cert_19_ecdh.cvcert  ff3d20d2
npa/cross/: Makefile.am  opensc.conf_win32
npa/cross/MacOSX_install/: postinstall
npa/cross/MacOSX_uninstall/: postinstall
npa/doc/: Doxyfile.in  Makefile.am  README.rst  README.rst.in  README.txt  README.txt.in  api.rst  api.txt  autotools.rst  autotools.txt  download.rst  download.txt  example.c  questions.rst  questions.txt.in
npa/m4/: Makefile.am
npa/src/: Makefile.am  binutil.c  boxing.c  card-npa.c  card-npa.h  ccid-types.h  example.c  iso-sm-internal.h  iso-sm.c  npa-tool.c  npa-tool.ggo.in  npa.c  npa_lib.c  pace-tool.c  pace.c  pkcs15-npa.c  scutil.c  sm.c  sslutil.c  sslutil.h
npa/src/npa/: boxing.h  iso-sm.h  npa.h  npa_lib.h  scutil.h  sm.h
npa/src/pace/: pace.h  scutil.h  sm.h
npa/win32/: Makefile.am  build_fix_zlib.patch  build_npa.patch
pace-gui/: ChangeLog  configure  configure.ac
pace-gui/images/: Makefile.am
pace-gui/src/: Makefile.am  chat-gui.py  pace-gui-globals.py.in  pace-gui.desktop.in  pace-gui.py  pace_gui_globals.py.in  pinpad.glade  pinpad.in  pinpad.py  pinpad_globals.py.in
pcsc-relay/: AUTHORS  ChangeLog  Makefile.am  README  README.md  configure.ac
pcsc-relay/doc/: Makefile.am  README.rst  README.rst.in  README.txt  README.txt.in  autotools.rst  autotools.txt  autotools.txt.in  download.rst  download.rst.in  download.txt  questions.rst.in  questions.txt  relay-note.txt
pcsc-relay/src/: Makefile.am  binutil.h  lnfc.c  lock.c  lock.h  opicc.c  pcsc-relay.c  pcsc-relay.ggo.in  pcsc-relay.h  pcsc.c  pcscutil.c  pcscutil.h  vicc.c  vpcd-driver.c  vpcd.c  vpcd.h
pcsc-relay/win32/: Makefile.am  libnfc_mingw.patch
picc_to_pcsc/: Makefile  README  configure.ac  picc_to_pcsc.c
picc_to_pcsc/src/: Makefile.am  opicc.c  pcsc-relay.c  pcsc-relay.h  pcscutil.h  picc.py  picc_to_pcsc.c  picc_to_pcsc.h
virtualsmartcard/: AUTHORS  ChangeLog  INSTALL  Makefile  Makefile.am  README  README.md  configure.ac  flake.nix  result  test_vicc_with_handler_test.sh  test_vicc_with_npa-tool.sh
virtualsmartcard/MacOSX/: Makefile.am  debuglog.h  ifdhandler.h  reader.h
virtualsmartcard/MacOSX/MacOSX_install/: postinstall
virtualsmartcard/MacOSX/MacOSX_uninstall/: postinstall
virtualsmartcard/belpic-example-data/: README.md  belpic.xml
virtualsmartcard/doc/: Info.plist  Makefile.am  README.rst  README.rst.in  README.txt  README.txt.in  api.rst  api.txt  autotools.rst  autotools.txt  download.rst  download.txt  download.txt.in  generate_modules.py  install.txt  relay-note.txt  virtualsmartcard  vpcd_example.conf
virtualsmartcard/doc/api/: virtualsmartcard.ConstantDefinitions.txt  virtualsmartcard.CryptoUtils.txt  virtualsmartcard.SmartcardFilesystem.txt  virtualsmartcard.SmartcardSAM.txt  virtualsmartcard.TLVutils.txt  virtualsmartcard.VirtualSmartcard.txt  virtualsmartcard.cards.cryptoflex.txt  virtualsmartcard.cards.ePass.txt  virtualsmartcard.cards.txt  virtualsmartcard.txt
virtualsmartcard/npa-example-data/: Example_Dataset_Mueller_Gertrud.txt  Makefile.am  ZZSTCVCA00001.cvcert  ZZSTCVCA00001.pem  ZZSTCVCA00001.pkcs8  ZZSTDVCA00001.cvcert  ZZSTDVCA00001.pkcs8  ZZSTTERM00001.cvcert  ZZSTTERM00001.pkcs8
virtualsmartcard/npa-example-data/dh/: DETESTDVDE019  Makefile.am  at.cvcert  at_key.pkcs8  cvca.cvcert  ef_cardaccess  ef_cardsecurity  npa_key
virtualsmartcard/npa-example-data/ecdh/: DECVCAAT00001  DETESTATDE019  Makefile.am  at_key.pkcs8  cvca.cvcert  ef_cardaccess  ef_cardsecurity  npa_key
virtualsmartcard/src/: Makefile.am
virtualsmartcard/src/ifd-vpcd/: Info.plist.in  Makefile.am  ifd-vpcd.c  ifd-vpcd.h  reader.conf.in
virtualsmartcard/src/libpcsclite/: Makefile.am  debug.c  libpcsclite.pc.in  winscard.c
virtualsmartcard/src/pcsclite-vpcd/: Makefile.am  error.c  libpcsclite.pc.in  misc.h  strlcpy.c  (+2 more)
virtualsmartcard/vpcd/: ifd.c  vpcd.c  vpcd.h
virtualsmartcard/vpicc/: CardGenerator.py  ConstantDefinitions.py  CryptoUtils.py  SEutils.py  SWutils.py  SmartcardFilesystem.py  SmartcardSAM.py  TLVutils.py  VirtualSmartcard.py  testconfig.mf  testconfig.sam  utils.py
virtualsmartcard/win32/: BixVReader.sln
(+387 files in other folders)
